--- a/redwines.html
+++ b/redwines.html
@@ -448,7 +448,7 @@
         <span></span>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="bushraswebsite.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="collections.html">Collections</a></li>
