--- a/contact.html
+++ b/contact.html
@@ -442,7 +442,7 @@
         <span></span>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="bushrawebsite1.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="collections.html">Collections</a></li>
