--- a/events.html
+++ b/events.html
@@ -407,7 +407,7 @@
         <span></span>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="bushrawebsite1.html">Home</a></li>
+        <li><a href="events.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="events.html" class="active">Events</a></li>
         <li><a href="collections.html">Collections</a></li>
