--- a/aboutus.html
+++ b/aboutus.html
@@ -424,7 +424,7 @@
         <span></span>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="bushrawebsite1.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutus.html" class="active">About Us</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="collections.html">Collections</a></li>
